--- a/index.html
+++ b/index.html
@@ -11,7 +11,48 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
+
 <body>
+
+  <header class="title py-2">
+    <h2>BLACKJACK</h2>
+  </header>
+
+  <div class="container">
+    <div class="row mt-2">
+      <div class="col text-center">
+        <button class="btn btn-danger">New Game</button>
+        <button class="btn btn-primary">Request a Card</button>
+        <button class="btn btn-primary">Stop</button>
+      </div>
+    </div>
+
+    <div class="row mt-2">
+      <div class="col">
+        <h1>Player - <small>0</small></h1>
+        <div id="player-cards">
+          <img class="bj-card" src="assets/cards/10C.png" alt="10C">
+          <img class="bj-card" src="assets/cards/10C.png" alt="10C">
+          <img class="bj-card" src="assets/cards/10C.png" alt="10C">
+          <img class="bj-card" src="assets/cards/10C.png" alt="10C">
+          <img class="bj-card" src="assets/cards/10C.png" alt="10C">
+        </div>
+      </div>
+    </div>
+
+    <div class="row mt-2">
+      <div class="col">
+        <h1>CPU - <small>0</small></h1>
+        <div id="cpu-cards">
+          <img class="bj-card" src="assets/cards/3C.png" alt="10C">
+          <img class="bj-card" src="assets/cards/3C.png" alt="10C">
+          <img class="bj-card" src="assets/cards/3C.png" alt="10C">
+          <img class="bj-card" src="assets/cards/3C.png" alt="10C">
+          <img class="bj-card" src="assets/cards/3C.png" alt="10C">
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script src="assets/js/app.js"></script>
 </body>
