--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <div class="container">
     <div class="row mt-2">
       <div class="col text-center">
-        <button class="btn btn-danger">New Game</button>
-        <button class="btn btn-primary">Request a Card</button>
-        <button class="btn btn-primary">Stop</button>
+        <button id="btn-new-game" class="btn btn-danger">New Game</button>
+        <button id="btn-request-card" class="btn btn-primary">Request a Card</button>
+        <button id="btn-stop-game" class="btn btn-primary">Stop</button>
       </div>
     </div>
 
